Added README for current implementation and ignored cache

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 # Prevent data from being pushed to the github repo cause its too much data
 data/political_leaning.csv
+cache/political_leaning.joblib
