--- a/config.json
+++ b/config.json
@@ -28,5 +28,5 @@
         "get_descriptive_statistics_after_masking": false,
         "masking_strategy": 0
     },
-    "load_dataset": false
+    "load_dataset": true
 }
